Fixed Side menu alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,6 @@ a:hover{
 }
 .routes{
     padding: 20px;
-    color: black;
-    display:flex;
-    justify-content: center;
 }
 .nav-container{
     position: fixed;
